--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "start": "node seeder.js && node index.js",
     "seeder": "node seeder.js"
   },
   "author": "",
