--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.16.3",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.5",
+    "slugify": "^1.6.6",
     "uuid": "^11.1.0"
   }
 }
